another div added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <div class="container">hello world!</div>
+    <div class="container">new div</div>
+    <div>another div</div>
 </body>
 </html>
